<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Basic -->
    <string name="app_name">MODS Explorer</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="main_menu">Main Menu</string>
    <string name="expandable_adapter">Expandable Adapter</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="log_out">Log out</string>
    <string name="nfc">NFC</string>
    <string name="stickers">Stickers</string>
    <string name="age_prompt">Select your age range:</string>
  	
    <!-- Processes -->
    <string name="process_database">Communicating with database…</string>
    
    <!-- Image descriptions -->
    <string name="desc_mods_logo">MODS Logo</string>
    
  	<!-- Hints -->
  	<string name="hint_email">Email</string>
  	<string name="hint_username">Username</string>
  	<string name="hint_password">Password</string>
  	
    <!-- Successes -->
    <string name="success_sign_up">Thanks for signing up, %s.</string>
    <string name="success_log_in">Welcome back, %s.</string>
    <string name="success_log_out">Goodbye, %s.</string>
    
    <!-- Errors -->
    <string name="error_parse_generic">ParseException %d!</string>
    <string name="error_parse_invalid_email">Invalid email!</string>
    <string name="error_parse_username_taken">Username taken!</string>
    <string name="error_contains_whitespace">Cannot contain whitespace!</string>
    <string name="error_empty_string">Cannot be empty!</string>
    <string name="error_info_has_errors">The above information has errors!</string>
    <string name="error_account_not_found">The account does not exist!</string>
    
    <!-- Arrays -->
    <string-array name="age_array">
        <item>0–9</item>
        <item>10–19</item>
        <item>20–29</item>
        <item>30–39</item>
        <item>40–49</item>
        <item>50–59</item>
        <item>60+</item>
    </string-array>
    
</resources>
