<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@color/yellow"
    tools:context="com.example.modsexplorer.WelcomeScreen" >
    
    <ImageView 
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/mods_logo"
        android:contentDescription="@string/desc_mods_logo"/>
    
    <!-- Child layout for containing buttons horizontally -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/sign_up" />
        
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/log_in" />
        
    </LinearLayout> 
	
</LinearLayout>